--- a/web/package.json
+++ b/web/package.json
@@ -22,10 +22,12 @@
     "async": "^2.6.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "email-templates": "^2.6.0",
     "express": "~4.16.0",
     "express-validator": "^3.2.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.18.9",
     "pg": "^6.4.1",
     "pug": "2.0.0-beta11",
