--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         android_lifecycle_version = '2.2.0'
         android_material_version = '1.2.0-alpha06'
         android_support_version = '1.2.0-beta01'
+        android_room_version = '2.3.0'
 
         chucker_interceptor_version = '3.4.0'
         constraint_layout_version = '2.0.0-alpha3'
