--- a/android/data/build.gradle
+++ b/android/data/build.gradle
@@ -53,8 +53,15 @@ dependencies {
     implementation(
         "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
         "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
-        "androidx.core:core-ktx:$android_core_version"
+        "androidx.core:core-ktx:$android_core_version",
+        "androidx.room:room-runtime:$android_room_version",
+        "androidx.room:room-ktx:$android_room_version",
+        "androidx.room:room-rxjava2:$android_room_version"
+
     )
+
+    annotationProcessor "androidx.room:room-compiler:$android_room_version"
+    kapt("androidx.room:room-compiler:$android_room_version")
 
     api(
         "com.squareup.retrofit2:retrofit:$retrofit_version",
