--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "debug": "~2.6.9",
     "email-templates": "^2.6.0",
     "express": "~4.16.0",
+    "express-basic-auth": "^1.2.0",
     "express-validator": "^3.2.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
