[#59] Init admin dashboard by express admin

--- a/web/config/config.json
+++ b/web/config/config.json
@@ -13,6 +13,9 @@
     "database": "sms-forwarder",
     "host": "127.0.0.1",
     "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": false
+    },
     "charset": "utf8",
     "logging": false
   },
