--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,9 @@
   "description": "Building the application to install on Android devices with Thai mobile numbers and forward incoming SMS to the group of developers/PM on development",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "monitor": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --stack_size=100000 ./bin/www",
+    "monitor": "nodemon --stack_size=100000 ./bin/www --ignore 'admin/config/settings.json'  --ignore 'admin/config/custom.json'",
+    "postinstall": "sequelize db:migrate --env production"
   },
   "engines": {
     "node": "10.17.0",
@@ -28,6 +28,7 @@
     "debug": "~2.6.9",
     "email-templates": "^2.6.0",
     "express": "~4.16.0",
+    "express-admin": "^1.4.3",
     "express-basic-auth": "^1.2.0",
     "express-validator": "^3.2.0",
     "http-errors": "~1.6.2",
